Fixed layout on small windows

--- a/public/index.css
+++ b/public/index.css
@@ -16,7 +16,7 @@ html, body {
 }
 
 .Page {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
